Semana 3/style.css
@import url('https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@500&display=swap');

* {
    margin: 0;
    font-family: 'Space Grotesk', sans-serif;
}
body {
    height: 100%;
}

.main {
    display: flex;
    flex-direction:row;
    position: absolute;
    height: 100%;

    & .gradient {
        width: 40%;
        height: 100%;
    }
}


.card-forms {
    width: 60%;
    display: grid;
    align-content: center;
    justify-items: start;
    margin: 0 120vw 0 20vw;
    grid-template-areas:
        "cardholder cardholder"
        "number number"
        "exp-date cvc"
        "confirm confirm";
    gap: 20px;
    font-size: 10px;
    grid-template-columns: 1fr 1fr;

    & h1{
        font-size: 14px;
        margin-bottom: 10px;
    }
}

.card-forms.completed {
    width: 60%;
    display: grid;
    align-content: center;
    justify-items: center;
    text-align: center;
    margin: 0 120vw 0 20vw;
    grid-template-areas:
        "complete"
        "thank"
        "message"
        "confirm";
    gap: 20px;
    grid-template-columns: 1fr;
}

.cardholder {
    grid-area: cardholder;
    width: 100%;
}

.number {
    grid-area: number;
    width: 100%;
}

.exp-date {
    position: relative;
    grid-area: exp-date;
    display: grid;
    grid-template-areas:
        "h1 h1"
        "month year"
        "expired expired"
        "blank-error blank-error"
        "month-error month-error";
    grid-template-columns: 1fr 1fr;
    column-gap: 13px;


    & h1 {
        grid-area: h1;
    }
    & #month {
        position: absolute;
        grid-area: month;
        width: 100%;
    }
    & #year {
        grid-area: year;
        width: 100%;
    }
}

.cvc {
    grid-area: cvc;
    display: flex;
    flex-direction: column;
}

input {
    width: 100%;
    height: 52.6119px;
    border-radius: 10px;
    padding: 14px;
    border: 0.5px solid hsl(270, 3%, 87%);
    box-sizing: border-box;
    font-size: 18px;
}
::placeholder {
    color: hsl(270, 3%, 87%);
    font-size: 18px;
}

button {
    grid-area: confirm;
    width: 400px;
    border-radius: 10px;
    border: none;
    padding: 20px;
    background: hsl(278, 68%, 11%);
    color: hsl(0, 0%, 100%);
    font-size: 20px;
}

.error-message {
    grid-area: error;
    color: red;
    font-size: 15px;
    text-wrap: no-wrap;
    box-sizing: border-box;
    padding: auto;

    &.month-error {
        grid-area: month-error;
    }
    &.blank-error {
        grid-area: blank-error;
    }
    &.expired {
        grid-area: expired;;
    }
}


.cards {
    display: flex;
    flex-direction: column;
    position: absolute;
    align-content: center;
    justify-content: center;
    height: 100%;
    gap: 10%;
    color: white;
    margin-left: 7vw;
}

.card-front {
    display: grid;
    position: relative;
    height: 225px;
    width: 447px;
    grid-template-areas:
        "logo"
        "card-number-mirror"
        "name-exp-mirror";
    align-items:start;
    justify-items: space-between;
    margin-right: 60px;

    & #front-img {
        position: absolute;
        box-shadow: 5px 5px 100px rgba(0, 0, 0, 0.428);
        border-radius: 10px;
        z-index: 0;
    }
    & #logo {
        grid-area: logo;
        position: relative;
        margin-left: 30px;
        margin-top: 30px;
        margin-bottom: 60px;
    }
    & h1 {
        grid-area: card-number-mirror;
        position: relative;
        margin-left: 30px;
    }
    & .card-bottom {
        grid-area: name-exp-mirror;
        position: relative;
        width: 87%;
        display: flex;
        justify-content: space-between;
        margin-left:30px;
    }
    & #exp-mirror {
        display: flex;
    }
}

.card-back {
    margin-left: 60px;
    position: relative;
    height: 225px;
    width: 447px;

    & img {
        position: absolute;
        box-shadow: 5px 5px 100px rgba(0, 0, 0, 0.428);
        border-radius: 10px;
    }
    & #cvc-mirror {
        position: relative;
        transform: translateX(80%) translateY(110px);
    }
}

#complete-icon {
    grid-area: complete;
    width: 80px;
    margin: 10px 0;
}

#thank {
    grid-area: thank;
    color: hsl(278, 68%, 11%);
    font-size: 28px;
    text-transform: uppercase;
    letter-spacing: 3.5px;
    margin: 20px 0 10px 0;
}

#message {
    grid-area: message;
    color: hsl(279, 6%, 55%);
    font-size: 18px;
    margin-bottom: 30px;
}

